--- a/pages/4173.html
+++ b/pages/4173.html
@@ -1101,7 +1101,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The theory called <em>the theory of general relativity</em> is the <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical field theory</a> that in <a class="existingWikiWord" href="/nlab/show/physics">physics</a> describes the field of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>.</p>
+<p>The theory called <em>the theory of general relativity</em> is a <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical field theory</a> that in <a class="existingWikiWord" href="/nlab/show/physics">physics</a> describes the field of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>.</p>
 
 <p>In general relativity physical <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> is modeled in terms of <a class="existingWikiWord" href="/nlab/show/differential+geometry">differential geometry</a> as a <a class="existingWikiWord" href="/nlab/show/Lorentzian+manifold">Lorentzian manifold</a> whose <a class="existingWikiWord" href="/nlab/show/pseudo-Riemannian+metric">pseudo-Riemannian metric</a> – or rather the <a class="existingWikiWord" href="/nlab/show/Levi-Civita+connection">Levi-Civita connection</a> that corresponds to it – encodes the field of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>.</p>
 
@@ -1186,14 +1186,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 15, 2019 at 01:51:33.
+  Last revised on January 15, 2019 at 05:22:53.
   See the <a href="https://ncatlab.org/nlab/history/general relativity" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/general+relativity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/general+relativity/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/general+relativity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/general+relativity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/general+relativity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/general+relativity/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/general+relativity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/general+relativity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/general relativity/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
