--- a/pages/19984.html
+++ b/pages/19984.html
@@ -760,7 +760,7 @@ margin-left: 0em;
 
 <p>Homotopy construction in <em>homotopy.io</em> is enabled by two basic mechanisms: <em>contraction</em>, which makes the geometry locally more singular; and <em>expansion</em>, which makes the geometry locally more generic. These local moves are then propagated to the surrounding geometry by <a class="existingWikiWord" href="/nlab/show/pushout">pushout</a> and <a class="existingWikiWord" href="/nlab/show/pullback">pullback</a> operations, ‘dragging’ neighbouring parts of the composite, and allowing the construction of nontrivial <a class="existingWikiWord" href="/nlab/show/homotopies">homotopies</a>. It is an open question whether these contraction and expansion moves are capable of generating all possible homotopies in every dimension.</p>
 
-<p>The image at the top-right shows a 3d surface diagram of one side of the <a class="existingWikiWord" href="/nlab/show/pentagon+equation">pentagon equation</a>.</p>
+<p>The image at the top-right shows a 3d surface diagram of one side of the <a class="existingWikiWord" href="/nlab/show/pentagon+equation">pentagon equation</a> (<a href="http://www.cs.bham.ac.uk/~vicaryjo/homotopy.io/nlab/side-of-pentagon.html"><em>live workspace</em></a>).</p>
 
 <h3 id="contributors">Contributors</h3>
 
@@ -774,7 +774,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Christoph+Dorn">Christoph Dorn</a>, <em>Associative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-categories</em> PhD thesis (<a href="https://www.dornchristoph.com/writing/dphil_intro.pdf">pdf</a>, <a href="https://arxiv.org/abs/1812.10586">arXiv:1812.10586</a>).</p>
+<p><a class="existingWikiWord" href="/nlab/show/Christoph+Dorn">Christoph Dorn</a>, <em>Associative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-categories</em>, PhD thesis (<a href="https://www.dornchristoph.com/writing/dphil_intro.pdf">pdf</a>, <a href="https://arxiv.org/abs/1812.10586">arXiv:1812.10586</a>).</p>
 </li>
 
 <li>
@@ -787,14 +787,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 15, 2019 at 05:40:23.
+  Last revised on January 15, 2019 at 06:31:30.
   See the <a href="https://ncatlab.org/nlab/history/homotopy.io" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homotopy.io" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopy.io/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/homotopy.io" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopy.io" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/homotopy.io" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopy.io/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/homotopy.io" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopy.io" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/homotopy.io/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
