--- a/pages/19984.html
+++ b/pages/19984.html
@@ -754,11 +754,17 @@ margin-left: 0em;
 <h3 id="overview">Overview</h3>
 <div style="float:right;margin:0 20px 10px 20px;"><img width="450" src="https://www.cs.bham.ac.uk/~vicaryjo/images/face_of_pentagon.jpg" alt="Screenshot of homotopy.io" />
 </div>
-<p>This page describes <em>homotopy.io</em>, a web-based <a class="existingWikiWord" href="/nlab/show/proof+assistant">proof assistant</a> for finitely-presented <a class="existingWikiWord" href="/nlab/show/globular+set">globular</a> <a class="existingWikiWord" href="/nlab/show/n-category"><em>n</em>-categories</a>, for arbitrary <em>n</em>. It is based on the theory of <a class="existingWikiWord" href="/nlab/show/associative+n-categories">associative <em>n</em>-categories (ANCs)</a>, which provides a strictly associative and unital model of composition that minimizes proof bureaucracy, with all the weak structure in homotopies of composites. The proof assistant allows the user to define <a class="existingWikiWord" href="/nlab/show/generators+and+relations">generators</a> for a <a class="existingWikiWord" href="/nlab/show/higher+category">higher category</a>, <a class="existingWikiWord" href="/nlab/show/composition">compose</a> them, apply <a class="existingWikiWord" href="/nlab/show/homotopies">homotopies</a>, and visualize the resulting composites as <a class="existingWikiWord" href="/nlab/show/string+diagrams">string diagrams</a> in 2 dimensions or <a class="existingWikiWord" href="/nlab/show/surface+diagrams">surface diagrams</a> in 3 dimensions. Interaction with the proof assistant is entirely by direct manipulation using the mouse.</p>
+<p>This page describes <em>homotopy.io</em>, a web-based <a class="existingWikiWord" href="/nlab/show/proof+assistant">proof assistant</a> for finitely-presented <a class="existingWikiWord" href="/nlab/show/globular+set">globular</a> <a class="existingWikiWord" href="/nlab/show/n-category"><em>n</em>-categories</a>, for arbitrary <em>n</em>:</p>
 
-<p>The proof assistant is still under development, and is not yet released for general use. It can be considered a successor to the existing proof assistant <a class="existingWikiWord" href="/nlab/show/Globular">Globular</a>, which allows the construction of formal proofs in a strictly associative and unital model of <a class="existingWikiWord" href="/nlab/show/4-categories">4-categories</a>.</p>
+<ul>
+<li><a href="https://homotopy.io">https://homotopy.io</a></li>
+</ul>
 
-<p>Homotopy construction in <em>homotopy.io</em> is enabled by two basic mechanisms: <em>contraction</em>, which makes the geometry locally more singular; and <em>expansion</em>, which makes the geometry locally more generic. These local moves are then propagated to the surrounding geometry by <a class="existingWikiWord" href="/nlab/show/pushout">pushout</a> and <a class="existingWikiWord" href="/nlab/show/pullback">pullback</a> operations, ‘dragging’ neighbouring parts of the composite, and allowing the construction of nontrivial <a class="existingWikiWord" href="/nlab/show/homotopies">homotopies</a>. It is an open question whether these contraction and expansion moves are capable of generating all possible homotopies in every dimension.</p>
+<p>It is based on the theory of <a class="existingWikiWord" href="/nlab/show/associative+n-categories">associative <em>n</em>-categories (ANCs)</a>, which provides a strictly associative and unital model of composition that minimizes proof bureaucracy, with all the weak structure in homotopies of composites. The proof assistant allows the user to define <a class="existingWikiWord" href="/nlab/show/generators+and+relations">generators</a> for a <a class="existingWikiWord" href="/nlab/show/higher+category">higher category</a>, <a class="existingWikiWord" href="/nlab/show/composition">compose</a> them, apply <a class="existingWikiWord" href="/nlab/show/homotopies">homotopies</a>, and visualize the resulting composites as <a class="existingWikiWord" href="/nlab/show/string+diagrams">string diagrams</a> in 2 dimensions or <a class="existingWikiWord" href="/nlab/show/surface+diagrams">surface diagrams</a> in 3 dimensions. Interaction with the proof assistant is entirely by direct manipulation using the mouse.</p>
+
+<p>It can be considered a successor to the existing proof assistant <a class="existingWikiWord" href="/nlab/show/Globular">Globular</a>, which allows the construction of formal proofs in a strictly associative and unital model of <a class="existingWikiWord" href="/nlab/show/4-categories">4-categories</a>.</p>
+
+<p>Homotopy construction in <em>homotopy.io</em> is enabled by two basic mechanisms: <em>contraction</em>, which makes the geometry locally more singular; and <em>expansion</em>, which makes the geometry locally more generic. These local moves ‘drag’ neighbouring parts of the composite, and allow the construction of nontrivial <a class="existingWikiWord" href="/nlab/show/homotopies">homotopies</a>. It is an open question whether these contraction and expansion moves are capable of generating all possible homotopies in every dimension.</p>
 
 <p>The image at the top-right shows a 3d surface diagram of one side of the <a class="existingWikiWord" href="/nlab/show/pentagon+equation">pentagon equation</a> (<a href="http://www.cs.bham.ac.uk/~vicaryjo/homotopy.io/nlab/side-of-pentagon.html"><em>live workspace</em></a>).</p>
 
@@ -787,14 +793,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 15, 2019 at 06:31:30.
+  Last revised on January 15, 2019 at 07:14:23.
   See the <a href="https://ncatlab.org/nlab/history/homotopy.io" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homotopy.io" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopy.io/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/homotopy.io" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopy.io" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/homotopy.io" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopy.io/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/homotopy.io" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopy.io" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/homotopy.io/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
