--- a/pages/7964.html
+++ b/pages/7964.html
@@ -509,6 +509,7 @@ margin-left: 0em;
 <li><a href='#MassAndVacuumInstability'>Mass and vacuum (in-)stability</a></li>
 <li><a href='#CosmologicalInstability'>Cosmological instability?</a></li>
 <li><a href='#AsymtoticSafetyOrNot'>Asymptotic safety?</a></li>
+<li><a href='#HiggsInflation'>Higgs inflation?</a></li>
 </ul>
 <li><a href='#models'>Models</a></li>
 <li><a href='#history'>History</a></li>
@@ -590,6 +591,10 @@ margin-left: 0em;
 </blockquote>
 
 <p><img src="https://ncatlab.org/nlab/files/HiggsQuarticBetaFunction.png" width="800" /></p>
+
+<h3 id="HiggsInflation">Higgs inflation?</h3>
+
+<p>Starting with <a href="cosmic+inflation#Jegerlehner13">Jegerlehner 13</a> has been argued that the near-criticality of the Higgs potential is in fact consistent or even necessary for <a class="existingWikiWord" href="/nlab/show/Higgs+inflation">Higgs inflation</a> to be a viable model. See <a href="cosmic+inflation#Jegerlehner18">Jegerlehner 18</a>.</p>
 
 <h2 id="models">Models</h2>
 
@@ -859,14 +864,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 29, 2018 at 15:57:05.
+  Last revised on January 15, 2019 at 07:31:20.
   See the <a href="https://ncatlab.org/nlab/history/Higgs field" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Higgs+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Higgs+field/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/Higgs+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Higgs+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Higgs+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Higgs+field/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/Higgs+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Higgs+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Higgs field/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
