--- a/pages/9880.html
+++ b/pages/9880.html
@@ -697,7 +697,7 @@ margin-left: 0em;
 </li>
 
 <li id="Jegerlehner18b">
-<p>Fred Jegerlehner, <em>The Role of Mesons in Muon <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">g-2</annotation></semantics></math></em> (<a href="https://arxiv.org/abs/1809.07413">arXiv:1809.07413</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Fred+Jegerlehner">Fred Jegerlehner</a>, <em>The Role of Mesons in Muon <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">g-2</annotation></semantics></math></em> (<a href="https://arxiv.org/abs/1809.07413">arXiv:1809.07413</a>)</p>
 </li>
 </ul>
 
@@ -754,14 +754,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  2, 2019 at 09:38:53.
+  Last revised on January 15, 2019 at 07:25:04.
   See the <a href="https://ncatlab.org/nlab/history/non-perturbative effect" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/non-perturbative effect/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
