--- a/pages/10950.html
+++ b/pages/10950.html
@@ -317,7 +317,10 @@ margin-left: 0em;
 
 <h4 id="philosophy">Philosophy</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/philosophy">philosophy</a></strong></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/philosophy">philosophy</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/ontology">ontology</a></p>
 
@@ -331,11 +334,23 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h3 id="schools">Schools</h3><ul>
+</ul>
+
+<h3 id="schools">Schools</h3>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/objective+idealism">objective idealism</a></li>
-</ul><h3 id="of_mathematics">Of mathematics</h3><ul>
+</ul>
+
+<h3 id="of_mathematics">Of mathematics</h3>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/philosophy+of+mathematics">philosophy of mathematics</a></li>
-</ul><h3 id="of_physics">Of physics</h3><ul>
+</ul>
+
+<h3 id="of_physics">Of physics</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/natural+philosophy">natural philosophy</a></p>
 </li>
@@ -343,15 +358,21 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/philosophy+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -363,7 +384,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -915,16 +942,28 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a><ul><li><a href="#general">General</a></li><li><a href="#interpretation_of_quantum_mechanics">Interpretation of quantum mechanics</a></li></ul></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#interpretation_of_quantum_mechanics'>Interpretation of quantum mechanics</a></li>
+</ul>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/philosophy">philosophy</a> of <a class="existingWikiWord" href="/nlab/show/physics">physics</a>.</p>
@@ -975,14 +1014,6 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Tim+Maudlin">Tim Maudlin</a>, <em>The Metaphysics Within Physics</em>, Oxford University Press, 2007</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Tim+Maudlin">Tim Maudlin</a>, <em>Philosophy of Physics, Volume 1: “Space and Time”. Princeton University Press, 2012</em></p>
-</li>
-
-<li>
 <p><a class="existingWikiWord" href="/nlab/show/Roland+Omn%C3%A8s">Roland Omnès</a>, <em><a class="existingWikiWord" href="/nlab/show/Converging+Realities+--+Toward+a+common+philosophy+of+physics+and+mathematics">Converging Realities – Toward a common philosophy of physics and mathematics</a></em>, Princeton University Press, 2005</p>
 </li>
 
@@ -1008,14 +1039,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 10:27:02.
+  Last revised on January 15, 2019 at 09:39:49.
   See the <a href="https://ncatlab.org/nlab/history/philosophy of physics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/philosophy+of+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/philosophy+of+physics/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/philosophy+of+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/philosophy+of+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/philosophy+of+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/philosophy+of+physics/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/philosophy+of+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/philosophy+of+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/philosophy of physics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
