--- a/pages/20052.html
+++ b/pages/20052.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9457/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9457/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -493,6 +493,8 @@ margin-left: 0em;
 
 <p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> be a <a class="existingWikiWord" href="/nlab/show/locale">locale</a>. Then a valuation on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> is by definition a valuation on its <a class="existingWikiWord" href="/nlab/show/frame">frame</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒪</mi><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathcal{O}(L)</annotation></semantics></math>. In particular, a valuation on a <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> is a valuation on the <a class="existingWikiWord" href="/nlab/show/lattice+of+open+subsets">lattice of its open sets</a>.</p>
 
+<p>Valuations on locales are used in the <a class="existingWikiWord" href="/nlab/show/topos+approach+to+quantum+mechanics">topos approach to quantum mechanics</a> and the <a class="existingWikiWord" href="/nlab/show/Bohr+topos">Bohr topos</a>.</p>
+
 <h2 id="examples">Examples</h2>
 
 <h3 id="dirac_valuation">Dirac valuation</h3>
@@ -531,6 +533,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/Thierry+Coquand">Thierry Coquand</a> and <a class="existingWikiWord" href="/nlab/show/Bas+Spitters">Bas Spitters</a>, <em>Integrals and Valuations</em> <a href="http://logicandanalysis.org/index.php/jla/article/view/14/12">link</a>.</p>
+</li>
+
+<li>
 <p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Valuation_(measure_theory)">Valuation (measure theory)</a></em></p>
 </li>
 </ul>
@@ -540,14 +546,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 14, 2019 at 11:22:00.
+  Last revised on January 15, 2019 at 10:21:17.
   See the <a href="https://ncatlab.org/nlab/history/valuation (measure theory)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/valuation+%28measure+theory%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/valuation+%28measure+theory%29/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/valuation+%28measure+theory%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/valuation+%28measure+theory%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/valuation+%28measure+theory%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/valuation+%28measure+theory%29/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/valuation+%28measure+theory%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/valuation+%28measure+theory%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/valuation (measure theory)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
